edit delete API
